--- a/styles/blocks/_card.scss
+++ b/styles/blocks/_card.scss
@@ -14,13 +14,13 @@
         justify-content: space-between;
 
         &--bg-1 {
-            background: url('/src/card-1.svg');
+            background: url('/image/card-1.svg');
         }
         &--bg-2 {
-            background: url('/src/card-2.svg');
+            background: url('/image/card-2.svg');
         }
         &--bg-3 {
-            background: url('/src/card-3.svg');
+            background: url('/image/card-3.svg');
         }
     }
 
