--- a/styles/styles.css
+++ b/styles/styles.css
@@ -359,7 +359,7 @@ a {
 .header {
   position: relative;
   padding-top: 16px;
-  background: url("./src/bg.svg");
+  background: url("./image/bg.svg");
   background-repeat: no-repeat;
   height: 100vh;
   padding-bottom: 50px;
@@ -828,13 +828,13 @@ a {
   justify-content: space-between;
 }
 .card__item--bg-1 {
-  background: url("/src/card-1.svg");
+  background: url("/image/card-1.svg");
 }
 .card__item--bg-2 {
-  background: url("/src/card-2.svg");
+  background: url("/image/card-2.svg");
 }
 .card__item--bg-3 {
-  background: url("/src/card-3.svg");
+  background: url("/image/card-3.svg");
 }
 .card__raiting {
   padding: 7px 11px;
