--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -1,7 +1,7 @@
 .header {
     position: relative;
     padding-top: 16px;
-    background: url('./image/bg.svg');
+    background: url('/image/bg.jpg');
     background-repeat: no-repeat;
     height: 100vh;
     padding-bottom: 50px;  
