--- a/styles/styles.css
+++ b/styles/styles.css
@@ -359,7 +359,7 @@ a {
 .header {
   position: relative;
   padding-top: 16px;
-  background: url("./image/bg.svg");
+  background: url("/image/bg.jpg");
   background-repeat: no-repeat;
   height: 100vh;
   padding-bottom: 50px;
