--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -3,11 +3,11 @@
     background-color: var(--color-accent);
     color: var(--color-light);
     font-size: 14px;
-    position: absolute;
-    transform: translate(0%, -25%);
+    // position: absolute;
+    // transform: translate(0%, -25%);
     z-index: -1;
-    right: 0;
-    left: 0;
+    // right: 0;
+    // left: 0;
     
     @include tablet-s {
         padding-top: 50px;
