--- a/styles/styles.css
+++ b/styles/styles.css
@@ -972,6 +972,7 @@ a {
   position: relative;
   display: flex;
   flex-direction: column;
+  background-color: var(--color-light);
 }
 .photo__inner {
   display: flex;
@@ -999,6 +1000,7 @@ a {
 }
 
 .form {
+  z-index: 2;
   padding: 40px 0;
   border-radius: 6px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.151);
@@ -1064,11 +1066,7 @@ a {
   background-color: var(--color-accent);
   color: var(--color-light);
   font-size: 14px;
-  position: absolute;
-  transform: translate(0%, -25%);
   z-index: -1;
-  right: 0;
-  left: 0;
 }
 @media (max-width: 980px) {
   .footer {
