--- a/styles/styles.css
+++ b/styles/styles.css
@@ -551,11 +551,23 @@ a {
   color: white;
   font-size: 16px;
 }
+@media (hover: hover) {
+  .finder__input:hover {
+    border-color: rgba(255, 255, 255, 0.73);
+  }
+}
+@media (hover: none) {
+  .finder__input:active {
+    border-color: rgba(255, 255, 255, 0.73);
+  }
+}
+.finder__input:focus {
+  outline: transparent;
+  box-shadow: 0 0 2px 0 black;
+  border-color: rgba(255, 255, 255, 0.73);
+}
 .finder__input:focus::placeholder {
   color: transparent;
-}
-.finder__item {
-  width: 270px;
 }
 .finder__label {
   width: 250px;
@@ -569,6 +581,14 @@ a {
 .finder input[type=date]::-webkit-calendar-picker-indicator {
   cursor: pointer;
   filter: invert(1);
+}
+.finder__item {
+  position: relative;
+  width: 270px;
+}
+.finder__item select option {
+  color: var(--color-accent);
+  background: transparent;
 }
 
 .burger {
@@ -1219,6 +1239,87 @@ a {
   z-index: 10;
   opacity: 1;
   cursor: pointer;
+}
+
+.dropdown__button {
+  position: relative;
+  cursor: pointer;
+  text-align: left;
+  font-size: 16px;
+}
+.dropdown__button:focus {
+  box-shadow: 0 0 2px 0 black;
+  border-color: rgba(255, 255, 255, 0.73);
+}
+@media (hover: hover) {
+  .dropdown__button:hover {
+    border-color: rgba(255, 255, 255, 0.73);
+  }
+}
+@media (hover: none) {
+  .dropdown__button:active {
+    border-color: rgba(255, 255, 255, 0.73);
+  }
+}
+.dropdown__list {
+  display: none;
+  position: absolute;
+  z-index: 2;
+  background-color: var(--color-light);
+  width: 270px;
+  overflow: hidden;
+  border-radius: 6px;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.19);
+}
+.dropdown__list-item {
+  cursor: pointer;
+  padding: 0 15px;
+  padding-bottom: 5px;
+}
+.dropdown__list-item:first-child {
+  padding-top: 5px;
+}
+@media (hover: hover) {
+  .dropdown__list-item:hover {
+    background-color: var(--color-gray);
+  }
+}
+@media (hover: none) {
+  .dropdown__list-item:active {
+    background-color: var(--color-gray);
+  }
+}
+
+.active {
+  display: block;
+}
+
+.dropdown__arrow-down {
+  cursor: pointer;
+  transition: all 0.2s;
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 10px;
+  border-right: 2px solid var(--color-light);
+  border-bottom: 2px solid var(--color-light);
+  rotate: 45deg;
+  top: 18px;
+  right: 15px;
+}
+
+.dropdown__arrow-up {
+  cursor: pointer;
+  transition: all 0.2s;
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 10px;
+  border-right: 2px solid var(--color-light);
+  border-bottom: 2px solid var(--color-light);
+  rotate: -135deg;
+  top: 24px;
+  right: 15px;
 }
 
 /*# sourceMappingURL=styles.css.map */
